payment/manifests/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-app
  namespace: python-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: payment-app
  template:
    metadata:
      labels:
        name: payment-app
    spec:
      containers:
      - name: payment-app
        image: payment-app:latest
        imagePullPolicy: Never
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: shop-ca
          mountPath: /certs
      restartPolicy: Always
      volumes:
      - name: shop-ca
        configMap:
          name: shop-ca
