payment/manifests/payment-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payment-network-policy
  namespace: python-shop
spec:
  podSelector:
    matchLabels:
      name: payment-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
          - key: name
            operator: In
            values:
            - db-set
            - shop-app
    ports:
    - protocol: TCP
      port: 8001
  egress:
  - to:
    - podSelector:
        matchExpressions:
          - key: name
            operator: In
            values:
            - db-set
            - shop-app
    ports:
    - protocol: TCP
      port: 8000
